Wrong content pasted from clipboard on Wayland after copying from and closing 2nd window, then copying from another window into 1st window
Version: GNOME Terminal 3.35.2 using VTE 0.59.1 +BIDI +GNUTLS +ICU
Session: Gnome (Wayland)
Steps to reproduce:
- Log in to Wayland session
- Open terminal window
- Switch to another workspace (it doesn't happen when it's in the same workspace)
- Open another terminal window
- Copy some text in the 2nd terminal window
- Close the 2nd terminal window
- Without closing the 1st terminal window, try copying something from another application (e.g. Browser) and try to paste it in the terminal.
Result: The terminal clipboard is stuck with whatever content was inside it when you closed the 2nd terminal window.
Restarting the gnome-terminal
process (i.e. closing all terminal windows) fixes it temporarily but happens again if you follow the steps above.
I tried installing various clipboard utilities (wl-clipboard, wl-clipboard-x11, xclip) but it doesn't seem to change anything.
It's a strange bug and I'm not sure how to debug it any further. Let me know if you need additional information.
Edited by Andre Klapper